--- a/assignment1/two_layer_net.ipynb
+++ b/assignment1/two_layer_net.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "\n",
     "from cs231n.classifiers.neural_net import TwoLayerNet\n",
     "\n",
-    "from __future__ import print_function\n",
+    "# from __future__ import print_function\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (10.0, 8.0) # set default size of plots\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +85,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your scores:\n",
+      "[[-0.81233741 -1.27654624 -0.70335995]\n",
+      " [-0.17129677 -1.18803311 -0.47310444]\n",
+      " [-0.51590475 -1.01354314 -0.8504215 ]\n",
+      " [-0.15419291 -0.48629638 -0.52901952]\n",
+      " [-0.00618733 -0.12435261 -0.15226949]]\n",
+      "\n",
+      "correct scores:\n",
+      "[[-0.81233741 -1.27654624 -0.70335995]\n",
+      " [-0.17129677 -1.18803311 -0.47310444]\n",
+      " [-0.51590475 -1.01354314 -0.8504215 ]\n",
+      " [-0.15419291 -0.48629638 -0.52901952]\n",
+      " [-0.00618733 -0.12435261 -0.15226949]]\n",
+      "\n",
+      "Difference between your scores and correct scores:\n",
+      "3.6802720496109664e-08\n"
+     ]
+    }
+   ],
    "source": [
     "scores = net.loss(X)\n",
     "print('Your scores:')\n",
@@ -118,9 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference between your loss and correct loss:\n",
+      "1.7985612998927536e-13\n"
+     ]
+    }
+   ],
    "source": [
     "loss, _ = net.loss(X, y, reg=0.05)\n",
     "correct_loss = 1.30378789133\n",
@@ -140,9 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b2 max relative error: 4.447625e-11\n",
+      "W2 max relative error: 3.440708e-09\n",
+      "b1 max relative error: 8.372511e-10\n",
+      "W1 max relative error: 3.561318e-09\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.gradient_check import eval_numerical_gradient\n",
     "\n",
@@ -435,9 +478,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -449,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
